# pidstat

./: LICENSE  flake.nix
module/: Makefile  pidstat.c
tool/: Cargo.toml
tool/src/: main.rs  pidstat.rs
