[package]
name = "tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
comfy-table = "7.1.0"
human_bytes = "0.4.3"
libc = "0.2.150"
nix = { version = "0.27.1", features = ["ioctl"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
